# pix_driver

./: .gitignore  README.md  robobus_pix_self_driving_2_0.dbc
pix_hongguang_mini_ev_driver/: CMakeLists.txt  package.xml
pix_hongguang_mini_ev_driver/include/: brakecommand_364.hpp  brakereport_289.hpp  gearcommand_104.hpp  gearreport_204.hpp  steeringcomand_18f.hpp  steeringcomand_314.hpp  steeringreport_18f.hpp  steeringreport_314.hpp  throttlecommand_101.hpp  throttlereport_201.hpp  vhiclemodecommand_100.hpp  vhiclemodereport_200.hpp
pix_hongguang_mini_ev_driver/launch/: pix_driver.launch
pix_hongguang_mini_ev_driver/src/: Byte.cc  auto_model.py  brakecommand_364.cc  brakereport_289.cc  command_node.cc  command_node_lod.cc  control_converter.py  control_converter_ok.py  control_converter_old.py  control_converter_test.py  gearcommand_104.cc  gearreport_204.cc  out_auto_control.py  report_converter_imu.py  report_converter_imu_copy.py  report_node.cc  steeringcomand_18f.cc  steeringcomand_314.cc  steeringreport_18f.cc  steeringreport_314.cc  throttlecommand_101.cc  throttlereport_201.cc  vhiclemodecommand_100.cc  vhiclemodereport_200.cc
pix_hongguang_mini_ev_driver_msgs/: CMakeLists.txt  package.xml
pix_hongguang_mini_ev_driver_msgs/msg/: brakecommand_364.msg  gearcommand_104.msg  gearreport_204.msg  steeringreport_18f.msg  throttlecommand_101.msg  throttlereport_201.msg  vhiclemodecommand_100.msg  vhiclemodereport_200.msg
pix_hooke_driver/: CMakeLists.txt  package.xml
pix_hooke_driver/include/pix_hooke_driver/: Byte.hpp  a2v_brakectrl_131.hpp  a2v_drivectrl_130.hpp  a2v_steerctrl_132.hpp  a2v_vehiclectrl_133.hpp  a2v_wheelctrl_135.hpp  (+14 more)
pix_hooke_driver/launch/: control_converter.launch  pix_autoware_interface.launch.xml  pix_hooke_driver.launch  pix_hooke_driver.launch.xml  report_converter.launch
pix_hooke_driver/src/: Byte.cc  a2v_brakectrl_131.cc  a2v_drivectrl_130.cc  a2v_steerctrl_132.cc  a2v_vehiclectrl_133.cc  a2v_wheelctrl_135.cc  control_command.cpp  control_command_node.cpp  control_converter.cpp  control_converter_node.cpp  report_converter.cpp  report_converter_node.cpp  report_parser.cpp  report_parser_node.cpp  v2a_brakestafb_531.cc  v2a_chassiswheelanglefb_541.cc  v2a_chassiswheelrpmfb_539.cc  v2a_chassiswheeltirepressfb_540.cc  v2a_drivestafb_530.cc  v2a_powerstafb_535.cc  v2a_steerstafb_532.cc  v2a_vehiclefltsta_537.cc  v2a_vehiclestafb_536.cc  v2a_vehicleworkstafb_534.cc
pix_hooke_driver_msgs/: CMakeLists.txt  package.xml
pix_hooke_driver_msgs/msg/: A2vBrakeCtrl.msg  A2vDriveCtrl.msg  A2vSteerCtrl.msg  A2vVehicleCtrl.msg  A2vWheelCtrl.msg  V2aBrakeStaFb.msg  V2aChassisWheelAngleFb.msg  V2aChassisWheelRpmFb.msg  V2aChassisWheelTirePressFb.msg  V2aDriveStaFb.msg  V2aPowerStaFb.msg  V2aSteerStaFb.msg  V2aVehicleFltSta.msg  V2aVehicleStaFb.msg  V2aVehicleWorkStaFb.msg
pix_mini_ev_driver/: CMakeLists.txt  package.xml
pix_mini_ev_driver/include/: Byte.hpp  eps_receive2_315.hpp  eps_receive_314.hpp  eps_send2_18e.hpp  eps_send_18f.hpp  msg100_100.hpp  msg101_101.hpp  msg104_104.hpp  msg200_200.hpp  msg201_201.hpp  msg204_204.hpp  receive_289.hpp  sendx_364.hpp
pix_mini_ev_driver/src/: Byte.cc  command_node.cc  control_converter.py  control_converter_speed.py  eps_receive2_315.cc  eps_receive_314.cc  eps_send2_18e.cc  eps_send_18f.cc  msg100_100.cc  msg101_101.cc  msg104_104.cc  msg200_200.cc  msg201_201.cc  msg204_204.cc  receive_289.cc  report_converter.py  report_converter_imu.py  report_node.cc  sendx_364.cc
pix_mini_ev_driver_msgs/: CMakeLists.txt  package.xml
pix_mini_ev_driver_msgs/msg/: eps_receive2_315.msg  eps_receive_314.msg  eps_send2_18e.msg  msg100_100.msg  msg101_101.msg  msg104_104.msg  msg200_200.msg  msg201_201.msg  msg204_204.msg  receive_289.msg
pix_robobus_driver/: CMakeLists.txt  package.xml
pix_robobus_driver/launch/: pix_autoware_interface.launch.xml  pix_hooke_driver.launch.xml  pix_robobus_driver.launch.xml
pix_robobus_driver/src/: Byte.cc  auto_ctrl_msg.cc  auto_remote_ctrl_msg.cc  bms_report.cc  brake_command.cc  brake_report.cc  chassis_sta_to_mobileye.cc  control_command.cpp  control_command_node.cpp  control_converter.cpp  control_converter_node.cpp  gear_command.cc  gear_report.cc  park_command.cc  park_report.cc  report_converter.cpp  report_converter_node.cpp  report_parser.cpp  report_parser_node.cpp  steering_command.cc  steering_report.cc  throttle_command.cc  throttle_report.cc  vcu_pad_transfer.cc  vcu_report.cc  vehicle_door_report.cc  vehicle_mileage_fb.cc  vehicle_mode_command.cc  wheel_speed_report.cc
pix_sweeping_driver/: CMakeLists.txt  package.xml
pix_sweeping_driver/launch/: pix_autoware_interface.launch.xml  pix_hooke_driver.launch.py  pix_hooke_driver.launch.xml
pix_sweeping_driver/src/: Byte.cc  acu_sweep_ctrl_cmd.cc  bms_report.cc  brake_command.cc  brake_report.cc  control_command.cpp  control_command_node.cpp  control_converter.cpp  control_converter_node.cpp  gear_command.cc  gear_report.cc  park_command.cc  park_report.cc  report_converter.cpp  report_converter_node.cpp  report_parser.cpp  report_parser_node.cpp  scu_work_time_fb.cc  steering_command.cc  steering_report.cc  throttle_command.cc  throttle_report.cc  vcu2_acu_chassis_err_code1.cc  vcu2_acu_chassis_err_code2.cc  vcu2_acu_chassis_err_code3.cc  vcu2_acu_sweep_fan_sta.cc  vcu2_acu_sweep_sta.cc  vcu2_acu_sweep_sta_fb.cc  vcu2_acu_sweep_work_sta.cc  vcu_report.cc  vehicle_mileage_fb.cc  vehicle_mode_command.cc  wheel_speed_report.cc
pix_sweeping_driver_msgs/: CMakeLists.txt  package.xml
pix_sweeping_driver_msgs/msg/: AcuSweepCtrlCmd.msg  BmsReport.msg  BrakeCommand.msg  BrakeReport.msg  GearCommand.msg  GearReport.msg  ParkCommand.msg  ParkReport.msg  ScuWorkTimeFb.msg  SteeringCommand.msg  SteeringReport.msg  ThrottleCommand.msg  ThrottleReport.msg  Vcu2AcuChassisErrCode1.msg  Vcu2AcuChassisErrCode2.msg  Vcu2AcuChassisErrCode3.msg  Vcu2AcuSweepFanSta.msg  Vcu2AcuSweepSta.msg  Vcu2AcuSweepStaFb.msg  Vcu2AcuSweepWorkSta.msg  VcuReport.msg  VehicleMileageFb.msg  VehicleModeCommand.msg  WheelSpeedReport.msg
(+80 files in other folders)
