<?xml version="1.0"?>
<package format="2">
  <name>pix_hongguang_mini_ev_driver_msgs</name>
  <version>0.0.0</version>
  <description>The pix_hongguang_mini_ev_driver_msg package</description>
  <maintainer email="pixmoving@pixmoving.net">pixmoving</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
