<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pix_hooke_driver</name>
  <version>0.9.0</version>
  <description>The pix_hooke_driver package</description>
  <maintainer email="mark@pixmoving.net">Mark Jin</maintainer>

  <license>Apache License 2.0</license>
  <depend>can_msgs</depend>
  <depend>pix_hooke_driver_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
