<?xml version="1.0"?>
<package format="2">
  <name>pix_mini_ev_driver</name>
  <version>0.0.0</version>
  <description>The pix_mini_ev_driver package</description>
  <maintainer email="team1@todo.todo">team1</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>can_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pix_mini_ev_driver_msgs</build_depend>
  <build_export_depend>autoware_msgs</build_export_depend>
  <build_export_depend>can_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>pix_mini_ev_driver_msgs</build_export_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pix_mini_ev_driver_msgs</exec_depend>

  <export></export>
</package>
